<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_nearly_black"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/taller_2"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"/>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Reutilizo patrón -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardCalculadora"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="12dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="14dp"
            app:cardElevation="6dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:padding="16dp"
                android:text="@string/calculadora"
                android:textStyle="bold"
                android:gravity="center"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardPromedio"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="12dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="14dp"
            app:cardElevation="6dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:padding="16dp"
                android:text="@string/promedio"
                android:textStyle="bold"
                android:gravity="center"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardConversor"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="12dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="14dp"
            app:cardElevation="6dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:padding="16dp"
                android:text="@string/conversor"
                android:textStyle="bold"
                android:gravity="center"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardProgramas"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="14dp"
            app:cardElevation="6dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:padding="16dp"
                android:text="@string/programas"
                android:textStyle="bold"
                android:gravity="center"/>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/Salir"
            android:backgroundTint="@color/orange_dark"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
